Add localization support and English locale